# tmb_effectsrunner

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  ITestEffect.h  TestColorBlend.cpp  TestColorBlend.h  TestEffect.cpp  TestEffect.h  TestEffectButtons.cpp  TestEffectButtons.h  TestEffectDefault.cpp  TestEffectDefault.h  TestEffectFadingPixels.cpp  TestEffectFadingPixels.h  TestEffectFallingPixels.cpp  TestEffectFallingPixels.h  TestEffectFont5x5.cpp  TestEffectFont5x5.h  TestEffectNightSky.cpp  TestEffectNightSky.h  TestEffectPlasma.cpp  TestEffectPlasma.h  TestEffectRandomPixels.cpp  TestEffectRandomPixels.h  TestEffectVolume.cpp  TestEffectVolume.h  TestEffectWandering.cpp  TestEffectWandering.h  main.cpp
